tests/invalid/type/type_mismatch_assignment.pts
function main() : void {
    int x = 1;
    x = "hello";
}
